--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -844,6 +844,17 @@ jobs:
             sudo sed -i "s|proxy_pass http://localhost:3001|proxy_pass http://127.0.0.1:4000|g" "$NGINX_CONFIG_FILE"
             sudo sed -i "s|proxy_pass http://localhost:4000|proxy_pass http://127.0.0.1:4000|g" "$NGINX_CONFIG_FILE"
             
+            # Update uploads directory path in nginx config
+            BACKEND_TARGET="${{ secrets.BACKEND_TARGET_DIR }}"
+            UPLOADS_DIR="$BACKEND_TARGET/uploads"
+            echo "Updating nginx uploads directory to: $UPLOADS_DIR"
+            # Update alias path for /uploads location
+            sudo sed -i "s|alias /var/www/christina-sings4you/backend/uploads|alias $UPLOADS_DIR|g" "$NGINX_CONFIG_FILE"
+            sudo sed -i "s|alias /var/www/christina-sings4you/uploads|alias $UPLOADS_DIR|g" "$NGINX_CONFIG_FILE"
+            # Verify the update
+            UPDATED_UPLOADS=$(grep -A 1 "location /uploads" "$NGINX_CONFIG_FILE" | grep "alias" | sed 's/.*alias\s\+\([^;]*\);.*/\1/')
+            echo "✅ Nginx uploads directory updated to: $UPDATED_UPLOADS"
+            
             # Create symlink if not exists
             if [ ! -L "${NGINX_SITES_ENABLED}/${DOMAIN}.conf" ]; then
               echo "Creating symlink in sites-enabled..."
