--- a/deployment/nginx/christina-sings4you.com.au.conf
+++ b/deployment/nginx/christina-sings4you.com.au.conf
@@ -221,23 +221,37 @@ server {
     # ------------------------------------------------------------------------
     # Uploads Directory - Serve uploaded files
     # ------------------------------------------------------------------------
-    # Serve uploaded files directly from backend uploads directory
-    # This is more efficient than proxying through Node.js
+    # Try to serve directly from filesystem first (more efficient)
+    # Fallback to proxy if file not found (for backward compatibility)
     location /uploads {
-        # Proxy to backend for file serving (backend handles static files)
+        # Try to serve from backend uploads directory directly
+        # This path will be updated by deploy script based on BACKEND_TARGET_DIR
+        # Default: /var/www/christina-sings4you/backend/uploads
+        # Note: Deploy script will replace this with actual BACKEND_TARGET_DIR/uploads
+        alias /var/www/christina-sings4you/backend/uploads;
+        
+        # If file not found, proxy to backend (backend will handle it)
+        try_files $uri @uploads_proxy;
+        
+        # Cache uploaded files for 1 year (they don't change)
+        expires 1y;
+        add_header Cache-Control "public, max-age=31536000, immutable";
+        
+        # Security headers
+        add_header X-Content-Type-Options "nosniff" always;
+        
+        # Disable directory listing
+        autoindex off;
+    }
+    
+    # Fallback proxy for uploads (if file not found in filesystem)
+    location @uploads_proxy {
         proxy_pass http://127.0.0.1:4000;
         proxy_http_version 1.1;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
-        
-        # Cache uploaded files for 1 year (they don't change)
-        proxy_cache_valid 200 1y;
-        add_header Cache-Control "public, max-age=31536000, immutable";
-        
-        # Allow larger file sizes for uploads
-        client_max_body_size 10M;
         
         # Timeouts for large file downloads
         proxy_connect_timeout 60s;
