--- a/deployment/nginx/christina-sings4you.com.au.conf
+++ b/deployment/nginx/christina-sings4you.com.au.conf
@@ -226,9 +226,9 @@ server {
     location /uploads {
         # Try to serve from backend uploads directory directly
         # This path will be updated by deploy script based on BACKEND_TARGET_DIR
-        # Default: /var/www/christina-sings4you/backend/uploads
+        # Default: /var/www/christina-sings4you/uploads (not backend/uploads)
         # Note: Deploy script will replace this with actual BACKEND_TARGET_DIR/uploads
-        alias /var/www/christina-sings4you/backend/uploads;
+        alias /var/www/christina-sings4you/uploads;
         
         # If file not found, proxy to backend (backend will handle it)
         try_files $uri @uploads_proxy;
