--- a/deployment/nginx/christina-sings4you.com.au.conf
+++ b/deployment/nginx/christina-sings4you.com.au.conf
@@ -224,10 +224,10 @@ server {
     # Try to serve directly from filesystem first (more efficient)
     # Fallback to proxy if file not found (for backward compatibility)
     location /uploads {
-        # Serve from backend uploads directory directly
-        # This path will be updated by deploy script based on BACKEND_TARGET_DIR
-        # Default: /var/www/christina-sings4you/uploads (not backend/uploads)
-        # Note: Deploy script will replace this with actual BACKEND_TARGET_DIR/uploads
+        # Serve from shared uploads directory at project root
+        # This path will be updated by deploy script based on PROJECT_ROOT
+        # Default: /var/www/christina-sings4you/uploads (shared, never deleted)
+        # Note: Deploy script will replace this with actual PROJECT_ROOT/uploads
         # Using root instead of alias so try_files works correctly
         root /var/www/christina-sings4you;
         
