--- a/deployment/nginx/christina-sings4you.com.au.conf
+++ b/deployment/nginx/christina-sings4you.com.au.conf
@@ -223,12 +223,14 @@ server {
     # ------------------------------------------------------------------------
     # Try to serve directly from filesystem first (more efficient)
     # Fallback to proxy if file not found (for backward compatibility)
-    location /uploads {
+    # CRITICAL: Use prefix match ^~ to prevent global root from overriding
+    location ^~ /uploads {
         # Serve from shared uploads directory at project root
         # This path will be updated by deploy script based on PROJECT_ROOT
         # Default: /var/www/christina-sings4you/uploads (shared, never deleted)
         # Note: Deploy script will replace this with actual PROJECT_ROOT/uploads
         # Using root instead of alias so try_files works correctly
+        # Prefix match ^~ ensures this location is processed first and uses its own root
         root /var/www/christina-sings4you;
         
         # Try to serve file from filesystem, if not found proxy to backend
